<resources>

    <string name="app_name">Freehand alpha</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">Freehand alpha</string>
    <string name="full_new_note">New Note</string>
    <string name="full_new_folder">New Folder</string>
    <string name="small_new_note">"New&#10;Note"</string>
    <string name="small_new_folder">"New&#10;Folder"</string>
    <string name="settings">Settings</string>
    <string name="show_all_notes">Show All Notes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="share_button">Share</string>
    <string name="preferences">Preferences</string>

</resources>