<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <View
        android:id="@+id/organizer_top_bar"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@color/dkgray" />
    
    <ImageView
        android:id="@+id/organizer_icon"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_height="60dip"
        android:layout_width="60dip"
        android:background="@drawable/freehand_organizer_logo" />
    
    <LinearLayout
        android:id="@+id/defaultActionBar"
        android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:paddingTop="5dip"
        android:paddingBottom="5dip" >
        
        <View
            android:background="@color/white"
            android:layout_width="1dip"
            android:layout_height="fill_parent" />
        
        <Button 
	   		android:id = "@+id/newNoteButton"
	   		style="@style/small_text_button"
	    	android:text="@string/small_new_note" />
        
        <View
            android:background="@color/white"
            android:layout_width="1dip"
            android:layout_height="fill_parent" />
        
        <Button 
    	    android:id="@+id/newFolderButton"
    	    style="@style/small_text_button"
    	    android:text="@string/small_new_folder" />
        
        <View
            android:background="@color/white"
            android:layout_width="1dip"
            android:layout_height="fill_parent" />
        
        <Button 
    	    android:id="@+id/preferences"
    	    style="@style/small_text_button"
	    	android:paddingRight="10dip"
    	    android:text="@string/settings" />
 	</LinearLayout>
 	
    <LinearLayout
        android:id="@+id/itemsSelectedActionBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
	    android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:paddingTop="5dip"
        android:paddingBottom="5dip" >
    	
        <View
            android:background="@color/white"
            android:layout_width="1dip"
            android:layout_height="fill_parent" />
        
        <com.freehand.organizer.HighlightButton 
	   		android:id = "@+id/cancelButton"
	   		style="@style/small_text_button"
	    	android:text = "@string/cancel" />
        
        <View
            android:background="@color/white"
            android:layout_width="1dip"
            android:layout_height="fill_parent" />

        <com.freehand.organizer.HighlightButton
            android:id = "@+id/shareButton"
            style="@style/small_text_button"
	    	android:text = "@string/share_button" />
        
        <View
            android:background="@color/white"
            android:layout_width="1dip"
            android:layout_height="fill_parent" />
        
        <com.freehand.organizer.HighlightButton
            android:id="@+id/renameButton"
            style="@style/small_text_button"
            android:text="@string/rename" />
        
        <View
            android:background="@color/white"
            android:layout_width="1dip"
            android:layout_height="fill_parent" />
        
		<com.freehand.organizer.HighlightButton 
	   		android:id = "@+id/deleteButton"
    		style="@style/small_text_button"
    		android:text = "@string/delete" />
		
	</LinearLayout>
        	   
	    
	<com.freehand.organizer.FolderBrowser
	    android:id="@+id/scrollView"
	    
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentBottom="true"
	    android:layout_below="@id/organizer_top_bar"
	    android:layout_width="fill_parent"
	    android:layout_height= "0dip"
	    android:drawSelectorOnTop="false" />
 
</RelativeLayout>